finish almost the whole calculator proj, two minor things left

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <button id="btnNum1" class="btn">1</button>
             <button id="btnNum2" class="btn">2</button>
             <button id="btnNum3" class="btn">3</button>
-            <button id="btnDvsn" class="btn">/</button>
+            <button id="btnDvsn" class="btn">÷</button>
             <button id="btnNum0" class="btn">0</button>
             <button id="btnDcmPnt" class="btn">.</button>
             <button id="btnEql" class="btn">=</button>
